# rob2-evaluator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  design.md  pyproject.toml  report-deepseek.html  report-gemma.html
.claude/agents/: logging-output-reviewer.md
.github/: copilot-instructions.md
examples/: 20.Gottlie.json  example_content_list.json
rob2_evaluator/: __init__.py  main.py  report_template.html.j2
rob2_evaluator/agents/: __init__.py  aggregator.py  analysis_type_agent.py  domain_agent.py  domain_deviation.py  domain_measurement.py  domain_missing_data.py  domain_randomization.py  domain_selection.py  entry_agent.py  quality_checker_agent.py  single_domain_reviewer.py
rob2_evaluator/config/: model_config.py  report_config.py  review_config.py
rob2_evaluator/factories/: __init__.py  domain_agent_factory.py  reporter_factory.py
rob2_evaluator/llm/: models.py
rob2_evaluator/parsers/: __init__.py  pdf_parsers.py
rob2_evaluator/processors/: __init__.py  base_processor.py  rob2_processor.py
rob2_evaluator/reports/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  word_reporter.py
rob2_evaluator/schema/: __init__.py  rob2_schema.py
rob2_evaluator/services/: __init__.py  evaluation_service.py  pdf_service.py  report_service.py
rob2_evaluator/templates/: report_template.html.j2  report_template_summary.html.j2
rob2_evaluator/utils/: __init__.py  cache.py  json_io.py  llm.py
tests/fixtures/: sample_content.py
tests/integration/: test_domain_deviation_agent.py  test_domain_randomization_agent.py  (+2 more)
(+9 files in other folders)
